[gd_scene load_steps=76 format=3 uid="uid://tfksyvs2qbdu"]

[ext_resource type="Script" uid="uid://lntsseib6ktx" path="res://scripts/planning_scene.gd" id="1_i05ib"]
[ext_resource type="PackedScene" uid="uid://csr8qdvijf7o8" path="res://scenes/non_playable/HeistPlanner.tscn" id="2_sfq2c"]
[ext_resource type="Script" uid="uid://d0klmhrydubhb" path="res://scripts/game_manager.gd" id="3_pbho8"]
[ext_resource type="Script" uid="uid://de1nc1oj51tr7" path="res://scripts/input_icon.gd" id="6_01txo"]
[ext_resource type="Script" uid="uid://dbq3ndy5purel" path="res://scripts/TuringBandUIManager.gd" id="7_1rttj"]
[ext_resource type="Texture2D" uid="uid://b78qp54wvgwhq" path="res://assets/sprites/input/generic_joypad/generic_LStick.png" id="7_vf1sc"]
[ext_resource type="Script" uid="uid://bxcsx3v1tofol" path="res://scripts/bandlController.gd" id="8_0acuf"]
[ext_resource type="Texture2D" uid="uid://ccllpjpc2upk8" path="res://assets/sprites/input/keyboard/shift.png" id="8_01txo"]
[ext_resource type="PackedScene" uid="uid://blbae5xp247m5" path="res://scenes/non_playable/Map.tscn" id="8_rly6o"]
[ext_resource type="PackedScene" uid="uid://cb36gbar6tdv" path="res://scenes/non_playable/guard.tscn" id="9_0acuf"]
[ext_resource type="Texture2D" uid="uid://bpuxo4sm8ksrs" path="res://assets/sprites/input/generic_joypad/generic_LT.png" id="9_4fghf"]
[ext_resource type="PackedScene" uid="uid://cxy4hikcjoxb7" path="res://scenes/non_playable/ui/turing_bandl_instruction_element_ui_scene.tscn" id="9_ec7cf"]
[ext_resource type="PackedScene" uid="uid://b44tvfhd3lcf1" path="res://scenes/non_playable/player.tscn" id="10_ec7cf"]
[ext_resource type="PackedScene" uid="uid://crkpn5vqe2wwa" path="res://scenes/non_playable/ui/chat.tscn" id="10_ibx1f"]
[ext_resource type="AudioStream" uid="uid://dpchh6yw6wdxn" path="res://assets/sounds/voicelines/tutorial/voiceline1.ogg" id="10_lxu5f"]
[ext_resource type="Script" uid="uid://bncnyql6noftg" path="res://scripts/tutorial_manager.gd" id="10_nivii"]
[ext_resource type="Texture2D" uid="uid://brdin8rl67s74" path="res://assets/sprites/input/generic_joypad/generic_RT.png" id="11_7doss"]
[ext_resource type="AudioStream" uid="uid://cwc3amyupydne" path="res://assets/sounds/voicelines/tutorial/voiceline2.ogg" id="11_ntchk"]
[ext_resource type="Script" uid="uid://emtjvummxi6o" path="res://scripts/guard_mover.gd" id="11_y7sd5"]
[ext_resource type="AudioStream" uid="uid://b5mmgknvk7eng" path="res://assets/sounds/voicelines/tutorial/voiceline3.ogg" id="12_jerq1"]
[ext_resource type="Script" uid="uid://der2d8iibxg75" path="res://scripts/planning_scene_player_controller.gd" id="12_y7sd5"]
[ext_resource type="Texture2D" uid="uid://d31y2as40r5tg" path="res://assets/sprites/input/playstation/playstation_Cross.png" id="13_hypni"]
[ext_resource type="AudioStream" uid="uid://il8nn1kyps6r" path="res://assets/sounds/voicelines/tutorial/voiceline4.ogg" id="13_m2q86"]
[ext_resource type="Texture2D" uid="uid://cwu2sxpm5by5h" path="res://assets/ui/planningscreenmap/map_in_lineart_scaled.png" id="13_un3xe"]
[ext_resource type="Texture2D" uid="uid://c1ymc2lrtlr1w" path="res://assets/sprites/input/xbox/xbox_A.png" id="14_0hyt6"]
[ext_resource type="AudioStream" uid="uid://brfhrtwxt1nw" path="res://assets/sounds/voicelines/tutorial/voiceline5.ogg" id="14_kitgh"]
[ext_resource type="PackedScene" uid="uid://dsn1mnxuhm7jh" path="res://scenes/non_playable/GoalObject.tscn" id="14_un3xe"]
[ext_resource type="Texture2D" uid="uid://priiirq3022c" path="res://assets/sprites/input/generic_joypad/generic_B.png" id="15_bdlay"]
[ext_resource type="AudioStream" uid="uid://bd5g7tc1nufnr" path="res://assets/sounds/voicelines/tutorial/voiceline6.ogg" id="15_yivre"]
[ext_resource type="Texture2D" uid="uid://jfnda028lhil" path="res://assets/sprites/input/generic_joypad/generic_A.png" id="16_a4yck"]
[ext_resource type="Script" uid="uid://cjqf4q1mwbr5e" path="res://scripts/place_walls.gd" id="16_ibx1f"]
[ext_resource type="AudioStream" uid="uid://c8hxsk8w5cdvs" path="res://assets/sounds/voicelines/tutorial/voiceline7.ogg" id="16_jlbm7"]
[ext_resource type="Script" uid="uid://djo1vvuimo46i" path="res://scripts/voiceline_resource.gd" id="17_b5yxx"]
[ext_resource type="AudioStream" uid="uid://blr07d13c8auj" path="res://assets/sounds/voicelines/tutorial/voiceline8.ogg" id="17_ntchk"]
[ext_resource type="AudioStream" uid="uid://fro82uqsswa3" path="res://assets/sounds/voicelines/tutorial/voiceline9.ogg" id="17_yefry"]
[ext_resource type="AudioStream" uid="uid://dxm7vwhuaydcp" path="res://assets/sounds/voicelines/tutorial/voiceline10.ogg" id="18_ynj1n"]
[ext_resource type="AudioStream" uid="uid://c31bejwv0f251" path="res://assets/sounds/voicelines/tutorial/voiceline11.ogg" id="19_po8np"]
[ext_resource type="AudioStream" uid="uid://b5d5e7rvhi0lc" path="res://assets/sounds/voicelines/tutorial/voiceline12.ogg" id="20_w8kyp"]
[ext_resource type="AudioStream" uid="uid://dw7hakj4u6b6y" path="res://assets/sounds/voicelines/tutorial/voiceline13.ogg" id="21_nup1x"]
[ext_resource type="AudioStream" uid="uid://5dskxy82tsru" path="res://assets/sounds/voicelines/tutorial/voiceline14.ogg" id="22_b5yxx"]
[ext_resource type="Texture2D" uid="uid://bp4ut1tshuu0t" path="res://assets/sprites/Tutorial/skip.png" id="27_jlbm7"]
[ext_resource type="AudioStream" uid="uid://da1ct5vg5ohpk" path="res://assets/sounds/voicelines/tutorial/voiceline15.ogg" id="28_ynj1n"]
[ext_resource type="PackedScene" uid="uid://dj8ocoeajpxud" path="res://scenes/non_playable/pause_menu.tscn" id="29_yefry"]
[ext_resource type="Texture2D" uid="uid://bogsrnq6djf7d" path="res://assets/sprites/input/keyboard/enter.png" id="33_kitgh"]
[ext_resource type="PackedScene" uid="uid://bg05c2k8pghfo" path="res://scenes/non_playable/PathElement.tscn" id="34_nup1x"]
[ext_resource type="Texture2D" uid="uid://dhpy1ykqcskhk" path="res://assets/sprites/input/keyboard/backspace.png" id="34_yivre"]
[ext_resource type="PackedScene" uid="uid://dj60x8hw0xguq" path="res://scenes/non_playable/HideElement.tscn" id="35_b5yxx"]
[ext_resource type="Texture2D" uid="uid://boa7jf3ocbkmv" path="res://assets/sprites/input/keyboard/arrow_keys.png" id="35_jlbm7"]
[ext_resource type="PackedScene" uid="uid://wg8m75jsgvyy" path="res://scenes/non_playable/SkullElement.tscn" id="36_01txo"]
[ext_resource type="AudioStream" uid="uid://dgku8m2ydkvlt" path="res://assets/music/planning_theme.ogg" id="36_yivre"]
[ext_resource type="Texture2D" uid="uid://dsxfyk0txjm5a" path="res://assets/ui/planningscreenmap/getdia.png" id="38_yefry"]
[ext_resource type="Texture2D" uid="uid://dikpwl32fxdsg" path="res://assets/sprites/input/keyboard/key_x.png" id="39_latlh"]
[ext_resource type="Texture2D" uid="uid://s3m77o8c2d4s" path="res://assets/sprites/input/playstation/playstation_Triangle.png" id="40_50e7h"]
[ext_resource type="Texture2D" uid="uid://7ibjlpjt0w3g" path="res://assets/sprites/input/xbox/xbox_Y.png" id="41_2gjlv"]
[ext_resource type="Texture2D" uid="uid://cs7tai0fp4xxw" path="res://assets/sprites/input/generic_joypad/generic_X.png" id="42_c8b5d"]
[ext_resource type="Texture2D" uid="uid://44m5l4ulq0i5" path="res://assets/sprites/input/generic_joypad/generic_Y.png" id="43_tvnrp"]

[sub_resource type="Environment" id="Environment_1rttj"]
background_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
background_energy_multiplier = 0.0
ambient_light_source = 2
ambient_light_energy = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_yefry"]
font_size = 46

[sub_resource type="Resource" id="Resource_01txo"]
script = ExtResource("17_b5yxx")
text = "I fulfilled my part of the bargain.
..."
audio_stream = ExtResource("10_lxu5f")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_vf1sc"]
script = ExtResource("17_b5yxx")
text = "The building plan and patrol routes are all yours.
..."
audio_stream = ExtResource("11_ntchk")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_4fghf"]
script = ExtResource("17_b5yxx")
text = "But this won't be easy. You'll have to come up with a foolproof plan."
audio_stream = ExtResource("12_jerq1")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_b5yxx"]
script = ExtResource("17_b5yxx")
text = "But with my intel, this should be as easy as..."
audio_stream = ExtResource("13_m2q86")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_xgh5o"]
script = ExtResource("17_b5yxx")
text = "... heh... stealing candy from a baby. Or stealing a gem from a museum."
audio_stream = ExtResource("14_kitgh")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_b31oo"]
script = ExtResource("17_b5yxx")
text = "You can plan your heist using the arrow keys. Go ahead."
audio_stream = ExtResource("15_yivre")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_06788"]
script = ExtResource("17_b5yxx")
text = "Splendid. On the right, you can see your move sequence."
audio_stream = ExtResource("16_jlbm7")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_255cg"]
script = ExtResource("17_b5yxx")
text = "Don't let these guards see you. Unless you really like jail."
audio_stream = ExtResource("17_ntchk")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_7doss"]
script = ExtResource("17_b5yxx")
text = "If you're behind a corner when a guard walks by, you may be able to hide using shift."
audio_stream = ExtResource("17_yefry")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_hypni"]
script = ExtResource("17_b5yxx")
text = "If you mess up your plan, you can always hit \"backspace\" to undo."
audio_stream = ExtResource("18_ynj1n")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_0hyt6"]
script = ExtResource("17_b5yxx")
text = "If you're confident about your plan, hit enter."
audio_stream = ExtResource("19_po8np")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_bdlay"]
script = ExtResource("17_b5yxx")
text = "Then get in there, and steal that precious gem."
audio_stream = ExtResource("20_w8kyp")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_a4yck"]
script = ExtResource("17_b5yxx")
text = "And remember..."
audio_stream = ExtResource("21_nup1x")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_latlh"]
script = ExtResource("17_b5yxx")
text = "You owe me."
audio_stream = ExtResource("22_b5yxx")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="Resource" id="Resource_50e7h"]
script = ExtResource("17_b5yxx")
text = "I'm watching you."
audio_stream = ExtResource("28_ynj1n")
metadata/_custom_type_script = "uid://djo1vvuimo46i"

[sub_resource type="LabelSettings" id="LabelSettings_ibx1f"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_r1aly"]
font_size = 36

[node name="PlanningScene" type="Node3D"]
script = ExtResource("1_i05ib")

[node name="Player" parent="." groups=["player"] instance=ExtResource("10_ec7cf")]

[node name="HeistPlanner" parent="." node_paths=PackedStringArray("player") instance=ExtResource("2_sfq2c")]
player = NodePath("../Player")

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("player", "goal")]
script = ExtResource("3_pbho8")
player = NodePath("..")
goal = NodePath("../GoalObject")

[node name="DiaPostit" type="Sprite2D" parent="."]
position = Vector2(45, 125)
scale = Vector2(0.09, 0.09)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -3.64, 7.594, -11.905)
environment = SubResource("Environment_1rttj")
projection = 1
fov = 50.0
size = 26.478

[node name="Hints" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Hints"]
layout_mode = 0
offset_left = 1251.0
offset_top = 636.0
offset_right = 1551.0
offset_bottom = 1080.0

[node name="Move" type="Label" parent="Hints/Panel"]
layout_mode = 0
offset_left = 147.0
offset_top = 22.0
offset_right = 824.0
offset_bottom = 371.0
text = "Plan"
label_settings = SubResource("LabelSettings_yefry")

[node name="InputIcon" type="Sprite2D" parent="Hints/Panel/Move"]
process_mode = 3
position = Vector2(-70, 35)
scale = Vector2(0.125, 0.125)
texture = ExtResource("35_jlbm7")
script = ExtResource("6_01txo")
keyboard_icon = ExtResource("35_jlbm7")
playstation_icon = ExtResource("7_vf1sc")
xbox_icon = ExtResource("7_vf1sc")
nintendo_icon = ExtResource("7_vf1sc")
generic_icon = ExtResource("7_vf1sc")

[node name="Hide" type="Label" parent="Hints/Panel"]
layout_mode = 0
offset_left = 147.0
offset_top = 127.0
offset_right = 824.0
offset_bottom = 476.0
text = "Hide"
label_settings = SubResource("LabelSettings_yefry")

[node name="InputIcon" type="Sprite2D" parent="Hints/Panel/Hide"]
process_mode = 3
position = Vector2(-70, 35)
scale = Vector2(0.125, 0.125)
texture = ExtResource("8_01txo")
script = ExtResource("6_01txo")
keyboard_icon = ExtResource("8_01txo")
playstation_icon = ExtResource("9_4fghf")
xbox_icon = ExtResource("9_4fghf")
nintendo_icon = ExtResource("9_4fghf")
generic_icon = ExtResource("9_4fghf")

[node name="Undo" type="Label" parent="Hints/Panel"]
layout_mode = 0
offset_left = 147.0
offset_top = 237.0
offset_right = 824.0
offset_bottom = 586.0
text = "Undo"
label_settings = SubResource("LabelSettings_yefry")

[node name="InputIcon" type="Sprite2D" parent="Hints/Panel/Undo"]
process_mode = 3
position = Vector2(-70, 35)
scale = Vector2(0.125, 0.125)
texture = ExtResource("34_yivre")
script = ExtResource("6_01txo")
keyboard_icon = ExtResource("34_yivre")
playstation_icon = ExtResource("11_7doss")
xbox_icon = ExtResource("11_7doss")
nintendo_icon = ExtResource("11_7doss")
generic_icon = ExtResource("11_7doss")

[node name="Start" type="Label" parent="Hints/Panel"]
layout_mode = 0
offset_left = 147.0
offset_top = 338.0
offset_right = 824.0
offset_bottom = 687.0
text = "Start"
label_settings = SubResource("LabelSettings_yefry")

[node name="InputIcon" type="Sprite2D" parent="Hints/Panel/Start"]
process_mode = 3
position = Vector2(-70, 35)
scale = Vector2(0.125, 0.125)
texture = ExtResource("33_kitgh")
script = ExtResource("6_01txo")
keyboard_icon = ExtResource("33_kitgh")
playstation_icon = ExtResource("13_hypni")
xbox_icon = ExtResource("14_0hyt6")
nintendo_icon = ExtResource("15_bdlay")
generic_icon = ExtResource("16_a4yck")

[node name="TuringBandlUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7_1rttj")

[node name="Panel" type="Panel" parent="TuringBandlUI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -372.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TuringBandlUI/Panel" node_paths=PackedStringArray("bandl1", "bandl2", "bandl3", "bandl4")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("8_0acuf")
bandl1 = NodePath("TuringBandlInstruction")
bandl2 = NodePath("TuringBandlInstruction2")
bandl3 = NodePath("TuringBandlInstruction3")
bandl4 = NodePath("TuringBandlInstruction4")

[node name="TuringBandlInstruction" parent="TuringBandlUI/Panel/VBoxContainer" instance=ExtResource("9_ec7cf")]
layout_mode = 2

[node name="TuringBandlInstruction2" parent="TuringBandlUI/Panel/VBoxContainer" instance=ExtResource("9_ec7cf")]
layout_mode = 2

[node name="TuringBandlInstruction3" parent="TuringBandlUI/Panel/VBoxContainer" instance=ExtResource("9_ec7cf")]
layout_mode = 2

[node name="TuringBandlInstruction4" parent="TuringBandlUI/Panel/VBoxContainer" instance=ExtResource("9_ec7cf")]
layout_mode = 2

[node name="TutorialUI2" type="Control" parent="." node_paths=PackedStringArray("heist_planner", "movement_hint", "undo_hint", "start_hint", "hide_hint")]
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("10_nivii")
heist_planner = NodePath("../HeistPlanner")
movement_hint = NodePath("../Hints/Panel/Move")
undo_hint = NodePath("../Hints/Panel/Undo")
start_hint = NodePath("../Hints/Panel/Start")
hide_hint = NodePath("../Hints/Panel/Hide")

[node name="Chat" parent="TutorialUI2" instance=ExtResource("10_ibx1f")]
lines = Array[ExtResource("17_b5yxx")]([SubResource("Resource_01txo"), SubResource("Resource_vf1sc"), SubResource("Resource_4fghf")])

[node name="Chat2" parent="TutorialUI2" instance=ExtResource("10_ibx1f")]
lines = Array[ExtResource("17_b5yxx")]([SubResource("Resource_b5yxx"), SubResource("Resource_xgh5o"), SubResource("Resource_b31oo")])

[node name="Chat3" parent="TutorialUI2" instance=ExtResource("10_ibx1f")]
lines = Array[ExtResource("17_b5yxx")]([SubResource("Resource_06788"), SubResource("Resource_255cg"), SubResource("Resource_7doss")])

[node name="Chat4" parent="TutorialUI2" instance=ExtResource("10_ibx1f")]
lines = Array[ExtResource("17_b5yxx")]([SubResource("Resource_hypni"), SubResource("Resource_0hyt6"), SubResource("Resource_bdlay")])

[node name="Chat5" parent="TutorialUI2" instance=ExtResource("10_ibx1f")]
lines = Array[ExtResource("17_b5yxx")]([SubResource("Resource_a4yck"), SubResource("Resource_latlh"), SubResource("Resource_50e7h")])
chat_icon = 1

[node name="Instructions" type="Label" parent="TutorialUI2"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = 43.0
offset_right = 1913.0
offset_bottom = 110.0
text = "Use the arrow keys to plan your heist."
label_settings = SubResource("LabelSettings_ibx1f")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="TutorialUI2"]
layout_mode = 0
offset_left = 23.0
offset_top = 975.0
offset_right = 581.0
offset_bottom = 1055.0
color = Color(0.306923, 0.306923, 0.306923, 1)

[node name="SkipLabel" type="Label" parent="TutorialUI2"]
layout_mode = 0
offset_left = 141.0
offset_top = 989.0
offset_right = 562.0
offset_bottom = 1039.0
text = "Press        to skip tutorial"
label_settings = SubResource("LabelSettings_r1aly")

[node name="Sprite2D" type="Sprite2D" parent="TutorialUI2/SkipLabel"]
position = Vector2(-60, 25)
scale = Vector2(0.1, 0.1)
texture = ExtResource("27_jlbm7")

[node name="InputIcon" type="Sprite2D" parent="TutorialUI2/SkipLabel"]
process_mode = 3
position = Vector2(130, 24)
scale = Vector2(0.1, 0.1)
texture = ExtResource("39_latlh")
script = ExtResource("6_01txo")
keyboard_icon = ExtResource("39_latlh")
playstation_icon = ExtResource("40_50e7h")
xbox_icon = ExtResource("41_2gjlv")
nintendo_icon = ExtResource("42_c8b5d")
generic_icon = ExtResource("43_tvnrp")

[node name="PauseMenu" parent="." instance=ExtResource("29_yefry")]

[node name="Map" parent="." instance=ExtResource("8_rly6o")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -16.5, 1.5, -19.5)
visible = false

[node name="MovementManager" type="Node" parent="."]

[node name="GuardMovementController" type="Node" parent="MovementManager" node_paths=PackedStringArray("guard_list")]
script = ExtResource("11_y7sd5")
guard_list = [NodePath("../../startingGumba"), NodePath("../../mainCircleGuard"), NodePath("../../redfloorGuard"), NodePath("../../randompillarroomguard"), NodePath("../../theFinalBoss")]

[node name="PlanningScenePlayerController" type="Node" parent="MovementManager" node_paths=PackedStringArray("player")]
script = ExtResource("12_y7sd5")
player = NodePath("../../Player")
PathElementScene = ExtResource("34_nup1x")
HideElementScene = ExtResource("35_b5yxx")
SkullElementScene = ExtResource("36_01txo")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(2.325, 0, 0, 0, -1.01629e-07, 2.325, 0, -2.325, -1.01629e-07, -11.955, -1.443, -11.964)
texture = ExtResource("13_un3xe")

[node name="GoalObject" parent="." instance=ExtResource("14_un3xe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, -22)

[node name="Walls" type="Node3D" parent="."]
visible = false
script = ExtResource("16_ibx1f")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("36_yivre")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="DiamondSticker" type="Sprite3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, -5.24537e-08, 1.2, 0, -1.2, -5.24537e-08, -24.2727, 3.08171, -21.7178)
texture = ExtResource("38_yefry")

[node name="mainCircleGuard" parent="." instance=ExtResource("9_0acuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -7)
input_sequence = Array[int]([1, 1, 1, 2, 2, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 0, 0, 0, 3, 3, 3, 0, 0, 0, 0, 0, 0, 3, 3, 3, 3, 3, 0, 1, 3, 1, 1, 3, 1])
id = 1

[node name="redfloorGuard" parent="." instance=ExtResource("9_0acuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, -6)
input_sequence = Array[int]([3, 3, 1, 2, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 3])
id = 2

[node name="randompillarroomguard" parent="." instance=ExtResource("9_0acuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -21)
input_sequence = Array[int]([1, 1, 1, 1, 1, 2, 2, 2, 2, 1, 1, 2, 2, 0, 0, 0, 0, 0, 0, 3, 3, 0, 0, 3, 3, 3, 3, 1])
id = 3

[node name="theFinalBoss" parent="." instance=ExtResource("9_0acuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -23)
input_sequence = Array[int]([3, 3, 3, 1, 3, 3, 0, 3, 3, 3, 1, 1, 2, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 0, 0, 0, 2, 2, 0, 0, 0, 3, 3, 3])
id = 4

[node name="startingGumba" parent="." instance=ExtResource("9_0acuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -2)
input_sequence = Array[int]([2, 2, 2, 2, 0, 2, 2, 2, 0, 0, 0, 0, 2, 2, 0, 0, 3, 3, 3, 2, 0, 0, 2, 2, 1, 1, 3, 3, 0, 0, 0, 0, 3, 3, 3, 0, 3, 3, 3, 1, 1, 3, 3, 3, 1, 1, 1, 2, 1, 1, 1, 3, 1, 1, 1, 1, 2, 2])
id = 5

[connection signal="load_game_board" from="." to="GameManager" method="_on_planning_scene_load_game_board"]
[connection signal="ready" from="Player" to="HeistPlanner" method="_on_player_ready"]
[connection signal="add_movement" from="HeistPlanner" to="TuringBandlUI" method="_on_heist_planner_add_movement"]
[connection signal="add_movement" from="HeistPlanner" to="MovementManager/PlanningScenePlayerController" method="_on_heist_planner_add_movement"]
[connection signal="heist_planned" from="HeistPlanner" to="." method="_on_heist_planner_heist_planned"]
[connection signal="heist_planned" from="HeistPlanner" to="MovementManager/PlanningScenePlayerController" method="_on_heist_planner_heist_planned"]
[connection signal="place_skull" from="HeistPlanner" to="MovementManager/PlanningScenePlayerController" method="_on_heist_planner_place_skull"]
[connection signal="remove_last_movement" from="HeistPlanner" to="TuringBandlUI" method="_on_heist_planner_remove_last_movement"]
[connection signal="remove_last_movement" from="HeistPlanner" to="MovementManager/PlanningScenePlayerController" method="_on_heist_planner_remove_last_movement"]
[connection signal="back_pressed" from="PauseMenu" to="GameManager" method="toggle_pause"]
